Update NickCore.java